--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,6 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
@@ -35,9 +34,9 @@ jobs:
       uses: docker/build-push-action@v1.1.0
       with:
         # Username used to log in to a Docker registry. If not set then no login will occur
-        username: $DOCKER_USERNAME
+        username: ${{ secrets.DOCKER_USERNAME }}
         # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
-        password: $DOCKER_PASSWORD
+        password: ${{ secrets.DOCKER_PASSWORD }}
         # Server address of Docker registry. If not set then will default to Docker Hub        
         # Docker repository to tag the image with
         repository: luklukls/pg2kafka
