--- a/_infra/k8s/prod.yaml
+++ b/_infra/k8s/prod.yaml
@@ -5,42 +5,42 @@ worker:
   env:
     - name: DATABASE_URL
       valueFrom:
-        configMapKeyRef:
+        secretKeyRef:
           name: pg2kafka-service-prod
           key: DATABASE_URL
     - name: TOPIC_NAMESPACE
       valueFrom:
-        configMapKeyRef:
+        secretKeyRef:
           name: pg2kafka-service-prod
           key: TOPIC_NAMESPACE
     - name: PERFORM_MIGRATIONS
       valueFrom:
-        configMapKeyRef:
+        secretKeyRef:
           name: pg2kafka-service-prod
           key: PERFORM_MIGRATIONS
     - name: DRY_RUN
       valueFrom:
-        configMapKeyRef:
+        secretKeyRef:
           name: pg2kafka-service-prod
           key: DRY_RUN
     - name: KAFKA_BROKER
       valueFrom:
-        configMapKeyRef:
+        secretKeyRef:
           name: pg2kafka-service-prod
           key: KAFKA_BROKER
     - name: KAFKA_USERNAME
       valueFrom:
-        configMapKeyRef:
+        secretKeyRef:
           name: pg2kafka-service-prod
           key: KAFKA_USERNAME
     - name: KAFKA_PASSWORD
       valueFrom:
-        configMapKeyRef:
+        secretKeyRef:
           name: pg2kafka-service-prod
           key: KAFKA_PASSWORD
     - name: HOSTNAME
       valueFrom:
-        configMapKeyRef:
+        secretKeyRef:
           name: pg2kafka-service-prod
           key: HOSTNAME
   enabled: true
