update dep installation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,15 @@ workflows:
   version: 2
   staging:
     jobs:
+      - go/build:
+          context: gke-stg
+          filters:
+            branches:
+              only: staging
       - container/build:
           context: gke-stg
+          requires:
+            - go/build
           filters:
             branches:
               only: staging
@@ -22,8 +29,17 @@ workflows:
               only: staging
   production:
     jobs:
+      - go/build:
+          filters:
+            tags:
+              only: /^v\d+.\d+.\d+.*/
+            branches:
+              ignore: /.*/
+
       - container/build:
-          context: gke-prod          
+          context: gke-prod
+          requires:
+            - go/build
           filters:
             tags:
               only: /^v\d+.\d+.\d+.*/
