--- a/_infra/k8s/urunan/prod.yaml
+++ b/_infra/k8s/urunan/prod.yaml
@@ -6,42 +6,37 @@ worker:
     - name: DATABASE_URL
       valueFrom:
         secretKeyRef:
-          name: pg2kafka-service-stg
+          name: urunan-service-prod
           key: DATABASE_URL
-    - name: TOPIC_NAMESPACE
-      valueFrom:
-        secretKeyRef:
-          name: pg2kafka-service-stg
-          key: TOPIC_NAMESPACE
     - name: PERFORM_MIGRATIONS
       valueFrom:
         secretKeyRef:
-          name: pg2kafka-service-stg
+          name: pg2kafka-service-prod
           key: PERFORM_MIGRATIONS
     - name: DRY_RUN
       valueFrom:
         secretKeyRef:
-          name: pg2kafka-service-stg
+          name: pg2kafka-service-prod
           key: DRY_RUN
     - name: KAFKA_BROKER
       valueFrom:
         secretKeyRef:
-          name: pg2kafka-service-stg
+          name: pg2kafka-service-prod
           key: KAFKA_BROKER
     - name: KAFKA_USERNAME
       valueFrom:
         secretKeyRef:
-          name: pg2kafka-service-stg
+          name: pg2kafka-service-prod
           key: KAFKA_USERNAME
     - name: KAFKA_PASSWORD
       valueFrom:
         secretKeyRef:
-          name: pg2kafka-service-stg
+          name: pg2kafka-service-prod
           key: KAFKA_PASSWORD
     - name: HOSTNAME
       valueFrom:
         secretKeyRef:
-          name: pg2kafka-service-stg
+          name: urunan-service-prod
           key: HOSTNAME
   enabled: true
 
@@ -59,14 +54,6 @@ worker:
 
 migration:
   enabled: false
-
-  resources:
-    requests:
-      cpu: 100m
-      memory: 512Mi
-    limits:
-      cpu: 200m
-      memory: 1Gi
 
 ingress:
   enabled: false
