--- a/_infra/k8s/urunan/prod.yaml
+++ b/_infra/k8s/urunan/prod.yaml
@@ -9,10 +9,7 @@ worker:
           name: urunan-service-prod
           key: DATABASE_URL
     - name: PERFORM_MIGRATIONS
-      valueFrom:
-        secretKeyRef:
-          name: urunan-service-prod
-          key: PERFORM_MIGRATIONS
+      value: true    
     - name: DRY_RUN
       valueFrom:
         secretKeyRef:
