--- a/_infra/k8s/kulonuwun/prod.yaml
+++ b/_infra/k8s/kulonuwun/prod.yaml
@@ -9,7 +9,10 @@ worker:
           name: kulonuwun-service-prod
           key: DATABASE_URL
     - name: PERFORM_MIGRATIONS
-      value: true
+      valueFrom:
+        secretKeyRef:
+          name: kulonuwun-service-prod
+          key: PERFORM_MIGRATIONS
     - name: DRY_RUN
       valueFrom:
         secretKeyRef:
