--- a/_infra/k8s/urunan/stg.yaml
+++ b/_infra/k8s/urunan/stg.yaml
@@ -9,7 +9,10 @@ worker:
           name: urunan-service-stg
           key: DATABASE_URL
     - name: PERFORM_MIGRATIONS
-      value: true
+      valueFrom:
+        secretKeyRef:
+          name: urunan-service-stg
+          key: PERFORM_MIGRATIONS
     - name: DRY_RUN
       valueFrom:
         secretKeyRef:
