--- a/_infra/k8s/jaga-sekutu/stg.yaml
+++ b/_infra/k8s/jaga-sekutu/stg.yaml
@@ -6,32 +6,32 @@ worker:
     - name: DATABASE_URL
       valueFrom:
         secretKeyRef:
-          name: jaga-hati-service-stg
+          name: jaga-sekutu-service-stg
           key: DATABASE_URL
     - name: PERFORM_MIGRATIONS
       valueFrom:
         secretKeyRef:
-          name: jaga-hati-service-stg
+          name: jaga-sekutu-service-stg
           key: PERFORM_MIGRATIONS
     - name: KAFKA_BROKER
       valueFrom:
         secretKeyRef:
-          name: jaga-hati-service-stg
+          name: jaga-sekutu-service-stg
           key: KAFKA_BROKER
     - name: KAFKA_USERNAME
       valueFrom:
         secretKeyRef:
-          name: jaga-hati-service-stg
+          name: jaga-sekutu-service-stg
           key: KAFKA_USERNAME
     - name: KAFKA_PASSWORD
       valueFrom:
         secretKeyRef:
-          name: jaga-hati-service-stg
+          name: jaga-sekutu-service-stg
           key: KAFKA_PASSWORD
     - name: HOSTNAME
       valueFrom:
         secretKeyRef:
-          name: jaga-hati-service-stg
+          name: jaga-sekutu-service-stg
           key: HOSTNAME
   enabled: true
 
